--- a/index.css
+++ b/index.css
@@ -1,254 +1,269 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
 }
 
-.header{
-    width: 100%;
-    height: 100px;
-    background-color: red;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: space-between;
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: space-between;
 }
 
-.header img{
+.header img {
 
   width: 150px;
   height: 150px;
   margin-left: 30px;
   justify-content: center;
-  
+
 
 }
 
 
 
-ul{
-    
-    list-style: none;
-    display: inline-block;
-    color: white;
-    vertical-align: top;
-    margin-top: 30px;
-    margin-left: 450px;
-    font-family: Arial, Helvetica, sans-serif;
+
+ul {
+
+  list-style: none;
+  display: inline-block;
+  color: white;
+  vertical-align: top;
+  margin-top: 30px;
+  margin-left: 450px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.header ul li{
-    display: inline-block;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 20px;
-    font-weight: 600;
-}
-
-.hypervinculofb{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction:row;
-
-
-  }
-
-main{
-    padding: 20px;
+.header ul li {
+  display: inline-block;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 20px;
+  font-weight: 600;
 }
 
 
 
-.tarjetas{
-    width: 300px;
-    height: 400px;
-    border: 3px solid white;
-    margin: 20px;
-    border-radius: 10px 20px 5px 40px;
-    display: inline-block;
-    font-family: Arial, Helvetica, sans-serif;
-    
+main {
+  padding: 20px;
 }
 
-.heading-card{
-    text-align: center;
+
+
+.tarjetas {
+  width: 300px;
+  height: 400px;
+  border: 3px solid white;
+  margin: 20px;
+  border-radius: 10px 20px 5px 40px;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+
 }
 
-.img-card{
-    width: 100%;
+.heading-card {
+  text-align: center;
 }
 
-span{
-    color: red;
-    font-weight: 900;
-    font-size: 18px;
+.img-card {
+  width: 100%;
 }
 
-section{
-    text-align: center;
+span {
+  color: red;
+  font-weight: 900;
+  font-size: 18px;
 }
 
-.open4{
+section {
+  text-align: center;
+}
 
-    border: 20px solid white;
-    background-color: red;
-    text-align: justify;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    }
+.open4 {
+
+  border: 20px solid white;
+  background-color: red;
+  text-align: justify;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 
 
-    form {
-      
-        margin: 0 auto;
-        width: 400px;
-    
-        padding: 1em;
-        border: 1px solid red;
-        border-radius: 1em;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-      
-      ul {
-        list-style: none;
-        color: #000;
-        padding: 0;
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-      
-      form li + li {
-        margin-top: 1em;
-      }
-      
-      label {
-    
-        display: inline-block;
-        width: 90px;
-        text-align: right;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-      
-      input,
-      textarea {
-     
-        font: 1em sans-serif;
-      
-        
-        width: 300px;
-        box-sizing: border-box;
-      
-      
-        border: 1px solid #999;
-      }
-      
-      input:focus,
-      textarea:focus {
-       
-        border-color: #000;
-      }
-      
-      textarea {
-  
-        vertical-align: top;
-      
+form {
 
-        height: 5em;
-      }
-      
-      .button {
-       
-        text-align: left;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-      
-     nav{
-   display: flex;
-   flex-direction: row;
-   border: 1px  solid black;
-   width: 800px;
-   height: auto;
-   margin-top: 20px;
+  margin: 0 auto;
+  width: 400px;
+  padding: 1em;
+  border-radius: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-   justify-content: center;
+ul {
+  list-style: none;
+  color: #000;
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+form li+li {
+  margin-top: 1em;
+}
+
+label {
+
+  display: inline-block;
+  width: 90px;
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+textarea {
+
+  font: 1em sans-serif;
+
+
+  width: 300px;
+  box-sizing: border-box;
+
+
+  border: 1px solid #999;
+}
+
+input:focus,
+textarea:focus {
+
+  border-color: #000;
+}
+
+textarea {
+
+  vertical-align: top;
+
+
+  height: 5em;
+}
+
+.button {
+
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  width: 800px;
+  height: auto;
+  margin-top: 20px;
+
+  justify-content: center;
   align-content: center;
 
 
-     }
+}
 
-     .banner{
+.banner {
 
-      color: white;
-
-
-     }
-
-     .jumbotron{
-
-      height: 400px;
-      width: auto;
-      border: 1px solid red;
-      display: flex;
-      justify-content: space-around;
-      flex-direction: column;
+  color: white;
 
 
-     }
+}
 
-     .jumbotron img {
+.jumbotron {
 
-      height: 350px;
-      display: flex;
-      justify-content: center;
-      align-content: end;
+  height: 400px;
+  width: auto;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+
+
+}
+
+.jumbotron img {
+
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-content: end;
 
 }
 
 
-.oferta{
-
-  border: 1px solid blueviolet;
+.oferta {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   justify-content: end;
   margin-left: auto;
-  
+
 }
 
-.jumbotronarticle{
-
-  border: 1px solid blue;
+.jumbotronarticle {
   display: flex;
   justify-content: space-around;
-  
- 
 
-}
-
-.jumbotronh1p{
-display: flex;
-flex-direction: column;
-
-}
-
-.carrito{
-display: flex;
-color: red;
-border: 1px solid red;
-justify-content: space-between;
 
 
 }
 
-.idproducto{
+.jumbotronh1p {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.carrito {
+  display: flex;
+  color: red;
+  border: 1px solid pink justify-content: space-between;
+
+
+}
+
+.idproducto {
 
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  background-color: red;
+  background-color: gray;
   color: aliceblue;
+}
 
 
 
+
+.hypervinculofb {
+
+  flex-direction: column;
+  display: flexbox;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.titulo2 {
+
+  color 1 px solid black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+.contact-button {
+  padding: 10px 20px;
+  background-color: gray;
+  color: white;
+  border-radius: 4px;
+  border: 2px solid black;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+vertical-align: text-top;
 }
