--- a/index.css
+++ b/index.css
@@ -222,7 +222,7 @@ nav {
 .carrito {
   display: flex;
   color: red;
-  border: 1px solid pink justify-content: space-between;
+  border: 1px solid pink justify-content space-between;
 
 
 }
@@ -249,7 +249,7 @@ nav {
 
 .titulo2 {
 
-  color 1 px solid black;
+  color:#000;
   font-family: Arial, Helvetica, sans-serif;
 }
 
